[package]
name = "pub_sub_server"
version = "0.1.0"
authors = ["Alexey Novakov <novakov.alex at gmail.com>"]

[dependencies]

rocket = "0.3.14"
rocket_codegen = "0.3.14"
rocket_contrib = {version = "*", default-features = false, features = ["uuid"]}

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

uuid = {version = "0.6", features = ["serde", "v4"]}

chrono = "0.4"

downcast-rs = "1.0.3"